# VINS-Mono

detection/: CMakeLists.txt  package.xml
detection/src/: detection_node.cpp  pytorch_cpp_wrapper.cpp  traffic_sign.cpp  traffic_sign.h  utils.cpp  utils.h  vehicle.h
vins_estimator/: CMakeLists.txt
vins_estimator/src/factor/: projection_landmark_factor.cpp  projection_landmark_factor.h
